<resources>
    <string name="app_name">Messenger App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to Continue\n</string>
    <string name="sign_out">sign out</string>
    <string name="welcome">Welcome</string>
    <string name="sign_continue">Sign in to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create Account</string>
    <string name="name">Full Name</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="search">search</string>
    <string name="fab_add">fab add</string>
</resources>